<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupPage">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_login"
        android:src="@drawable/avion_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        style="@style/texto_grande"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/registrarse_y"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        style="@style/texto_grande"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/empezar_a_transferir"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda"
        app:layout_constraintTop_toTopOf="@id/guideline1" />

    <!--Input Nombre-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelNombre"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/nombreLabel"
        app:layout_constraintBottom_toTopOf="@id/nombreInput"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreInput"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/alke_blue"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:hint="@string/ingresar_nombre"
            android:textColorHint="@color/gris_claro" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--End Input Nombre-->


    <!--Input Apellido-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelApellido"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:paddingTop="10dp"
        android:text="@string/apellidoLabel"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda"
        app:layout_constraintTop_toBottomOf="@id/nombreInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/apellidoInput"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/alke_blue"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda"
        app:layout_constraintTop_toBottomOf="@id/labelApellido">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:hint="@string/ingresar_apellido"
            android:textColorHint="@color/gris_claro" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--End Input Apellido-->

    <!--Input Mail-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelEmail"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:paddingTop="10dp"
        android:text="@string/emailLabel"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda"
        app:layout_constraintTop_toBottomOf="@id/apellidoInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/alke_blue"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda"
        app:layout_constraintTop_toBottomOf="@id/labelEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:hint="@string/ingresar_tu_email"
            android:textColorHint="@color/gris_claro" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--End Input Mail-->

    <!-- Input Password   -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_pass"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:paddingTop="10dp"
        android:text="@string/passlLabel"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda"
        app:layout_constraintTop_toBottomOf="@id/emailInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/alke_blue"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/gris_claro"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda"
        app:layout_constraintTop_toBottomOf="@id/label_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:hint="@string/ingresar_pass"
            android:inputType="textPassword"
            android:textColorHint="@color/gris_claro" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--End Input Password-->

    <!-- Input Re-Password   -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_repass"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:paddingTop="10dp"
        android:text="@string/reingresar_contrase_a"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda"
        app:layout_constraintTop_toBottomOf="@id/passwordInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rePasswordInput"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/alke_blue"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/gris_claro"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda"
        app:layout_constraintTop_toBottomOf="@id/label_repass">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:hint="@string/reingresar_contrase_a"
            android:inputType="textPassword"
            android:textColorHint="@color/gris_claro" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--End Input Re-Password-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinederecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="21dp" />


    <Button
        android:id="@+id/crea_cuenta"
        style="@style/boton_azul"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:text="@string/crear_cuenta"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda"
        app:layout_constraintTop_toTopOf="@id/guideline4" />

    <Button
        android:id="@+id/tiene_cuenta"
        style="@style/boton_transparente"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:text="@string/ya_tienes_una_cuenta"
        android:textColor="@color/azul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelinederecha"
        app:layout_constraintStart_toStartOf="@id/guidelineizquierda"
        app:layout_constraintTop_toTopOf="@id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineizquierda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="21dp" />
</androidx.constraintlayout.widget.ConstraintLayout>